<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CESC</string>
    <string name="title_activity_login">Sign in</string>
    <string name="google_maps_key">AIzaSyDTXmHUqYPdI9Pki8d3TOTsswiEtG1togA</string>
    <string name="prompt_email">Email ID/MR ID</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This MR Id  is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_empty_password">Password can not be empty.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Please enter valid MR id.</string>
    <string name="error_internet_not_connected">Please Check Your Internet Connection.</string>
    <string name="message_can_not_send_to_this_consumer">Message can\'t send to this consumer</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="please_contact_with_admin_for_password">Please contact with admin for password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_in_connection">Error in connection.</string>
    <string name="action_settings">Settings</string>
    <string name="start_meter_reading">Start Meter Reading</string>
    <string name="summary">Summary</string>
    <string name="profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Do you want to close this application?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_summary">My Summary</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="total_assigned">Total Assigned</string>
    <string name="open">Open</string>
    <string name="revisit">Revisit</string>
    <string name="pending_uploads">Pending Uploads</string>
    <string name="my_schedule">My Schedule</string>
    <string name="route">Route</string>
    <string name="bharat_patil">Bharat Patil</string>
    <string name="consumer_id">Consumer ID</string>
    <string name="meter_no">Meter No</string>
    <string name="meter">Meter</string>
    <string name="dt_code">DT Code</string>
    <string name="bill_cycle_code">Bill Cycle Code</string>
    <string name="pole_no">Pole No</string>
    <string name="route_id">Route ID</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>
    <string name="allow_to_ask_permission_again">Allow to Ask Again</string>
    <string name="permission_rejected_already">" permission(s) were previously rejected"</string>
    <string name="please_hold_scanner_on_qr_code">Please Hold Scanner On QR Code..</string>
    <string name="scanning">Scanning....</string>
    <string name="qr_scanning">QR Scanning</string>
    <string name="scanning_failed">Scanning Failed!</string>
    <string name="do_you_want_to_retry">Do you want to retry?</string>
    <string name="nagpur">Nagpur</string>
    <string name="city">City</string>
    <string name="m412431">M412431</string>
    <string name="mr_id">MR ID</string>
    <string name="mr_name">Mr Name</string>
    <string name="stopped">Stopped....</string>
    <string name="status">Status</string>
    <string name="scan_successful">Scan Successful</string>
    <string name="matched">Matched</string>
    <string name="add_as_a_new_consumer">Add as a New Consumer</string>
    <string name="search_again_manually">Search again manually</string>
    <string name="meter_status">Meter Status</string>
    <string name="capture_image">Capture Image</string>
    <string name="is_any_suspicious_activity_found">Is any suspicious activity found?</string>
    <string name="partial">P</string>
    <string name="full">F</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view">View</string>
    <string-array name="reader_status">
        <item>@string/reader_status_mandatory</item>
    </string-array>
    <string name="validate">Validate</string>
    <string name="name">Name</string>
    <string name="meter_reading">Meter Reading</string>
    <string name="add_remarks_if_any">Add Remark if any</string>
    <string name="remark">Remark</string>
    <string name="type_here">Type Here</string>
    <string name="consumer_name">Consumer Name</string>
    <string name="consumer_address">Consumer Address</string>
    <string name="total_tasks">Total Tasks</string>
    <string name="select_route">Select Route</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="change">Change</string>
    <string name="unchange">Unchange</string>
    <string name="confirm">Confirm</string>
    <string name="total_routes_assigned">Total Routes Assigned</string>
    <string name="completed">Completed</string>
    <string name="add_new_consumer">Add New Consumer</string>
    <string name="my_profile">My Profile</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="gallery">Gallery</string>
    <string name="er_you_havent_picked_image">You haven\'t picked Image</string>
    <string name="er_something_wents_wrong">Something went wrong</string>
    <string name="sync">Sync</string>
    <string name="month">Month</string>
    <string name="connection_type">Connection type</string>
    <string name="consumer_email">Email Id</string>
    <string name="er_user_not_avaliable">User not available please contact server admin!</string>
    <string name="er_data_not_avaliable">Data not available please contact server admin!</string>
    <string name="er_please_contact_server_admin">Your username and phone id does not match, Please contact admin.</string>
    <string name="consumer_added_successfully">Consumer added successfully.</string>
    <string name="login_error_101">Login failed: User ID and password doesn\'t match.</string>
    <string name="login_error_102">Login failed: User ID is not active.</string>
    <string name="login_error_103">Login failed: IMEI ID doesn\'t match.</string>
    <string name="login_error_null">Login failed. Please Try Again.</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="menu_Logout">Logout</string>
    <string name="Remove">Remove</string>
    <string name="no_internet_connection">No Internet</string>
    <string name="search_string">Search by Consumer no, Meter no, Consumer name</string>
    <string name="logout_string">Are you sure you want to Logout?</string>
    <string name="No_Consumer_found">No Consumer Found.</string>
    <string name="default_search_text">You can search by <b>Consumer Number, Meter Number, or by Consumer Name </b>  with at least <b>4</b> characters</string>
    <string name="empty_string_err">This Meter Reading field should not be empty.</string>
    <string name="err_meter_image_required">Please take meter picture this field should not be empty.</string>
    <string name="take_reading">Take Reading</string>
    <string name="blank_meter_reading_image">Please take meter reading picture.</string>
    <string name="invalid_meter_reading">Invalid meter reading. Min 1 and Max 10 digits allowed.</string>
    <string name="invalid_normal_meter_reading">Consumption is Negative, Please Check Current Reading.</string>
    <string name="meter_reading_manual">Manual</string>
    <string name="meter_reading_qr_code">QRCode</string>
    <string name="upload_before_download_error">Please Upload readings before refreshing consumer info.</string>
    <string name="gps_off_error">Please turn on GPS.</string>
    <string name="meter_reading_not_allowed_error">Not allowed to Enter Meter Reading.</string>
    <string name="meter_status_mandatory">Meter Status*</string>
    <string name="meter_status_normal">Normal</string>
    <string name="meter_status_faulty">Faulty</string>
    <string name="meter_status_lock_premise">LockPremise</string>
    <string name="meter_status_reading_overflow">ReadingOverflow</string>
    <string name="meter_status_inaccessible">Inaccessible</string>
    <string name="meter_status_meter_missing">Meter Missing</string>
    <string name="connection_not_found">Connection Not Found</string>
    <string name="addnewconsumer">New</string>
    <string name="punch_rnt_readings">Click to Punch RNT Readings</string>
    <string name="click_my_score">Click to know your Score</string>
    <string name="please_provide_meter_status">Please provide Meter status</string>
    <string name="please_provide_reader_status">Please provide Reader status</string>
    <string name="one_consumer_matched">One Consumer Matched</string>
    <string name="FCM_PREF">com.cesc.mrbd.fcm_pref</string>
    <string name="FCM_TOKEN">com.cesc.mrbd.fcm_token</string>
    <string name="please_enter_valid_email_id">Please enter valid E-mail Id.</string>
    <string name="please_enter_valid_mobile_number">Please enter valid Mobile Number.</string>
    <string name="please_enter_consumer_name">Please enter consumer name.</string>
    <string name="please_enter_valid_meter_number">Please enter valid meter number.</string>
    <string name="please_enter_meter_number">Please enter meter number.</string>
    <string name="please_enter_valid_consumer_number">Please enter valid consumer number.</string>
    <string name="please_enter_consumer_number">Please enter consumer number.</string>
    <string name="please_add_valid_binder">Please add valid Binder</string>
    <string name="please_add_valid_bill_month">Please add valid Bill Month.</string>
    <string name="please_add_valid_sub_division">Please add valid subdivision.</string>
    <string name="welcome_you_have_successfully_login">Welcome, You have Successfully Login</string>
    <string name="please_update_consumer_data_before_starting_search">Please update consumer data before starting a search. Pls press refresh button.</string>
    <string name="meter_number">Meter Number*</string>
    <string name="mobile">Mobile</string>
    <string name="manisha_londhe_patil">Manisha P Londhe Patil</string>
    <string name="consumer">Consumer</string>
    <string name="number">54554547878232223</string>
    <string name="small_number">5455</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_message">This is message body of the Notification .........</string>
    <string name="binder">Binder</string>
    <string name="ok">OK</string>
    <string name="alert_dialog_with_title">Alert Dialog With Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="meter_changed">Meter Changed</string>
    <string name="round_complete">Round Complete</string>
    <string name="meter_tampered">Meter Tampered</string>
    <string name="advance_billing">Advance Billing</string>
    <string name="please_select_above_category">Please select above category</string>
    <string name="abnormal_reading">Abnormal Reading</string>
    <string name="please_add_meter_number">Please add meter number</string>
    <string name="enter_meter_number">Add Meter Number</string>
    <string name="bill_distribution" tools:ignore="ExtraTranslation">Bill Distribution</string>
    <string name="payment">Payment</string>
    <string name="disconnection">Disconnection</string>
</resources>