<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_centerInParent="true"
    android:elevation="10dp"
    app:cardCornerRadius="15dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="10p"
    android:background="@color/colorBlack"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/high_importance"/>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/abnormal_reading"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_xxx_large"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/please_add_meter_number"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_x_large"/>

        <LinearLayout
            android:id="@+id/linear_four_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_meter_changed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/meter_changed"/>

                <RadioButton
                    android:id="@+id/radio_meter_tampered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/meter_tampered"/>

                <RadioButton
                    android:id="@+id/radio_round_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/round_complete"/>

                <RadioButton
                    android:id="@+id/radio_advance_billing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/advance_billing"/>

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_above_category"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/text_x_large"
            android:textColor="@color/colorRed"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_meter_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_color"
                android:hint="@string/meter_number"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
                android:padding="15dp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/enter_meter_number"
                android:gravity="center"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/text_large"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/positive_button"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/positive_button"
                android:text="@string/ok"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

