<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:elevation="10dp"
    app:cardCornerRadius="15dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="10p"
    android:background="@color/colorBlack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/txt_consumer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_xxx_large"
            android:text="@string/consumer_name"
            android:textColor="@color/colorText12"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txt_consumer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="2dp"
            android:textSize="@dimen/text_large"
            android:textColor="@color/sub_heading_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_consumer_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consumer"
                        android:textColor="@color/colorText12"
                        android:textSize="@dimen/text_x_large" />

                    <TextView
                        android:id="@+id/txt_consumer_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/manisha_londhe_patil"
                        android:textColor="@color/sub_heading_color"
                        android:textSize="@dimen/text_large"
                        android:layout_marginTop="2dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_meter_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meter"
                        android:textColor="@color/colorText12"
                        android:textSize="@dimen/text_x_large" />

                    <TextView
                        android:id="@+id/txt_meter_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textColor="@color/sub_heading_color"
                        android:textSize="@dimen/text_large"
                        android:layout_marginTop="2dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_subdiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sub Division"
                        android:textColor="@color/colorText12"
                        android:textSize="@dimen/text_x_large" />

                    <TextView
                        android:id="@+id/txt_subdiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textColor="@color/sub_heading_color"
                        android:textSize="@dimen/text_large"
                        android:layout_marginTop="2dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_cycle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cycle"
                        android:textColor="@color/colorText12"
                        android:textSize="@dimen/text_x_large" />

                    <TextView
                        android:id="@+id/txt_cycle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/small_number"
                        android:textColor="@color/sub_heading_color"
                        android:textSize="@dimen/text_large"
                        android:layout_marginTop="2dp"/>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_binder_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/binder"
                        android:textColor="@color/colorText12"
                        android:textSize="@dimen/text_x_large" />

                    <TextView
                        android:id="@+id/txt_binder_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textColor="@color/sub_heading_color"
                        android:textSize="@dimen/text_large"
                        android:layout_marginTop="2dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:textColor="@color/colorText12"
                        android:textSize="@dimen/text_x_large" />

                    <TextView
                        android:id="@+id/txt_mobile_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/small_number"
                        android:textColor="@color/sub_heading_color"
                        android:textSize="@dimen/text_large"
                        android:layout_marginTop="2dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/ok"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:background="@drawable/positive_button"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

    </LinearLayout>

</android.support.v7.widget.CardView>