<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_notification_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:id="@+id/tv_notifications_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#424242"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold|italic"
                android:text="@string/notification_title"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#424242"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/notification_message"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:textColor="#424242"
            android:textSize="12dp"
            android:layout_weight="1"
            android:background="#f0efef"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/today"/>

    </LinearLayout>

</RelativeLayout>